force-app/main/default/objects/Batalha__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Data de inicio da batalha</description>
    <inlineHelpText>Data em que teve inicio a batalha</inlineHelpText>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>