force-app/main/default/objects/Batalha__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <description>Data em que a balha se encerra</description>
    <inlineHelpText>Data de encerramento da batalh</inlineHelpText>
    <label>Data de Término</label>
    <type>Date</type>
</CustomField>