force-app/main/default/objects/Batalha__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Campo para descrever alguns acontecimento ou algo sobre a batalha</description>
    <inlineHelpText>Campo para descrever alguns acontecimento ou algo sobre a batalha</inlineHelpText>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>