force-app/main/default/objects/Batalha__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado da batalha</description>
    <inlineHelpText>Qual a situação da batalha</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciada</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Fechada e Ganha</fullName>
            </value>
            <value>
                <fullName>Fechada e Perdida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>